rust/kcl-lib/tests/invalid_member_object_using_string/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing invalid_member_object_using_string.kcl
---
KCL Semantic error

  × semantic: Only numbers (>= 0) can be indexes
   ╭─[6:7]
 5 │ // Try to index with a string.
 6 │ one = obj[p]
   ·       ───┬──
   ·          ╰── tests/invalid_member_object_using_string/input.kcl
   ╰────
